# pyTOST

./: .gitignore  .zenodo.json  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  optimize_cluster_params.ipynb  optimize_spatiotemporal_params.ipynb  paper.bib  paper.md  pyTOST_advanced_demo.ipynb  pyTOST_demo.ipynb  pyproject.toml
.github/workflows/: zenodo-release.yml
examples/: pyTOST_advanced_demo.ipynb  pyTOST_basic_demo.ipynb
notebooks/: pyTOST_advanced_demo.ipynb  pyTOST_basic_demo.ipynb
pyTOST/: .bootstrap.py.swp  .make_notebook.py.swp  CONTRIBUTING.md  MANIFEST.in  README.md  __init__.py  bootstrap.py  diagnostics.py  pyTOST_demo.ipynb  pyproject.toml  visualize.py  workflow.py
pyTOST.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyTOST/data_gen/: .optimize_spatiotemporal_params.py.swp  __init__.py  best_params_cluster.json  best_spatial_params.json  best_spatiotemporal_params.json  best_spatiotemporal_params_v2.json  best_temporal_params.json  notebook_utils.py  optimize_cluster_params.ipynb  optimize_cluster_params.py  optimize_spatial_params.ipynb  optimize_spatial_params.py  optimize_spatiotemporal_params.ipynb  optimize_spatiotemporal_params.py  optimize_temporal_params.ipynb  optimize_temporal_params.py  params_io.py  spatial_params.json  synthetic_tost_data.py
pyTOST/engines/: __init__.py  cluster_tost.py  heteroskedastic_tost.py  iid_tost.py  pubgrade_spatial_tost.py  robust_location_tost.py  spatial_tost.py  spatiotemporal_tost.py  temporal_tost.py
tests/: conftest.py  test_cluster_engine.py  test_data_gen.py  test_deterministic_baselines.py  test_license.py  test_spatial_engine.py  test_spatiotemporal_engine.py  test_temporal_engine.py  test_workflow.py
(+10 files in other folders)
